<resources>
    <string name="app_name">Hunter</string>
    <string name="masuk"><u>Masuk</u></string>
    <string name="daftar"><u>Daftar</u></string>
    <string name="lupa_password"><u>Lupa password?</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lokasi_kamu">Lokasi kamu</string>
    <string name="poin_kamu">Poin Kamu</string>
    <string name="tukar">Tukar</string>
    <string name="artikel">Artikel</string>
    <string name="bacaan_pariwisata_malang">Bacaan Pariwisata Malang</string>
    <string name="recommendation_header">Rekomendasi tempat terdekat</string>
    <string name="lihat_selengkapnya"><u>Lihat selengkapnya</u></string>
    <string name="misi">Misi</string>
    <string name="peringkatmu">Peringkatmu \n<big><big><big><b>Ke-100</b></big></big></big></string>
    <string name="scan_dan_dapatkan_poin">Scan dan dapatkan poin</string>
    <string name="mission_recommendation_title">Ayo kunjungi lokasi berikut!</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="location_required_error">Location services must be enabled for this game.</string>

    <string name="permission_denied_explanation">
        You need to grant location permission in order to play this game.
    </string>
    <string name="settings">Settings</string>
    <string name="location_setting_off">Please turn on device location in Settings and try again.
    </string>

    <!--    Geofence Status Strings-->
    <string name="geofences_added">Geofence for %s activated.</string>
    <string name="geofences_removed">Geofences removed.</string>
    <string name="geofence_entered">Geofence entered.</string>
    <string name="geofence_over">You have found the treasure! Congratulations!</string>

    <!-- Notification Strings-->
    <string name="channel_name">GeofenceStatus</string>
    <string name="content_text">Yey!! Kamu sedang berada di %s klaim poinmu sekarang.</string>
    <string name="notification_channel_description">Geofence status notification</string>

    <string name="geofences_not_removed">Geofences not removed.</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="geofence_error">There was an error in finding your treasure</string>
    <string name="arrived_result_text">Anda berada pada wilayah wisata %s</string>
    <string name="explore">Explore</string>
    <string name="klaim">Klaim</string>
</resources>