<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.raion.hunter.homepage.HomepageViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/homepage_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".homepage.FragmentHomepage"
            android:paddingTop="16dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <TextView
                android:id="@+id/location_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lokasi_kamu"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/plusjakartadisplay_regular"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_down"
                app:layout_constraintTop_toTopOf="@id/location_caption"
                app:layout_constraintStart_toEndOf="@id/location_caption"
                app:layout_constraintBottom_toBottomOf="@id/location_caption"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/location_caption"
                android:textColor="@color/black"
                style="@style/h6"
                tools:text="Kota Malang" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/iv_profile_container"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/iv_user_avatar"
                    android:scaleType="centerCrop"
                    android:importantForAccessibility="no" />

            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/iv_circle_search"
                android:importantForAccessibility="no"
                android:layout_marginEnd="12dp"
                android:clickable="true"
                app:layout_constraintEnd_toStartOf="@id/iv_profile_container"
                app:layout_constraintTop_toTopOf="@id/iv_profile_container"
                app:layout_constraintBottom_toBottomOf="@id/iv_profile_container" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/poin_container"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="12dp"
                app:layout_constraintTop_toBottomOf="@id/location_text"
                android:layout_marginTop="24dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp">

                    <TextView
                        android:id="@+id/poin_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/poin_kamu"
                        android:textColor="@color/white"
                        style="@style/body1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="150 Poin"
                        android:textColor="@color/white"
                        style="@style/h5"
                        android:layout_below="@id/poin_title" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/orange"
                        android:layout_alignParentEnd="true"
                        android:text="@string/tukar"
                        android:textAllCaps="false"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        app:cornerRadius="32dp" />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/article_container"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                app:cardBackgroundColor="@color/orange"
                app:cardCornerRadius="12dp"
                app:layout_constraintTop_toBottomOf="@id/poin_container"
                android:layout_marginTop="12dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/iv_article_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="-24dp" />

                    <TextView
                        android:id="@+id/article_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/artikel"
                        android:textColor="@color/white"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/article_subtitle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintVertical_chainStyle="packed"
                        android:layout_marginStart="24dp"
                        style="@style/body1" />

                    <TextView
                        android:id="@+id/article_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bacaan_pariwisata_malang"
                        android:textColor="@color/white"
                        android:fontFamily="@font/plusjakartatext_regular"
                        app:layout_constraintTop_toBottomOf="@id/article_text"
                        app:layout_constraintStart_toStartOf="@id/article_text"
                        app:layout_constraintBottom_toBottomOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/recommendation_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recommendation_header"
                app:layout_constraintTop_toBottomOf="@id/article_container"
                style="@style/h2"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:layout_marginTop="12dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/place_recommendation_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:clipToPadding="false"
                app:layout_constraintTop_toBottomOf="@id/recommendation_header"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>