<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mission.FragmentMission"
        android:background="@color/blue">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/back_button_mission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:fabCustomSize="42dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_arrow_left"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/misi"
            style="@style/h5"
            app:layout_constraintStart_toEndOf="@id/back_button_mission"
            app:layout_constraintTop_toTopOf="@id/back_button_mission"
            app:layout_constraintBottom_toBottomOf="@id/back_button_mission"
            android:textColor="@color/white"
            android:layout_marginStart="12dp"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mission_container_1"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:cardElevation="8dp"
            android:layout_marginEnd="6dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/mission_container_2"
            app:layout_constraintTop_toBottomOf="@id/back_button_mission"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/star_bg"
                android:scaleType="centerCrop"
                android:importantForAccessibility="no"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peringkatmu"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:fontFamily="@font/plusjakartatext_regular"
                android:textColor="@color/blue"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mission_container_2"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="12dp"
            android:layout_marginStart="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/mission_container_1"
            app:layout_constraintTop_toBottomOf="@id/back_button_mission"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/star_bg"
                android:scaleType="centerCrop"
                android:importantForAccessibility="no"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_scan"
                    app:tint="@color/blue"
                    android:importantForAccessibility="no"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_dan_dapatkan_poin"
                    android:fontFamily="@font/plusjakartatext_regular"
                    android:textSize="18sp"
                    android:textColor="@color/blue"
                    android:textAlignment="center"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/rounded_top_corner"
            app:layout_constraintTop_toBottomOf="@id/mission_container_1"
            android:paddingTop="24dp"
            android:layout_marginTop="32dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mission_recommendation_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/mission_recommendation_title"
                android:textAllCaps="false"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/plusjakartatext_bold"
                android:textSize="16sp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                app:cornerRadius="6dp"
                android:clickable="false"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mission_recommendation_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/mission_recommendation_title"
                android:layout_marginTop="16dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingBottom="24dp"
                android:clipToPadding="false"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>